Closed Bug 1608311 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::ClientWebGLContext::SetDimensions]

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 --- unaffected
firefox73 --- unaffected
firefox74 --- fixed

People

(Reporter: mccr8, Assigned: jgilbert)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

This bug is for crash report bp-b3f352c8-ae7e-438e-bf0c-714090200110.

Top 10 frames of crashing thread:

0 xul.dll mozilla::ClientWebGLContext::SetDimensions dom/canvas/ClientWebGLContext.cpp:664
1 xul.dll mozilla::dom::CanvasRenderingContextHelper::UpdateContext dom/canvas/CanvasRenderingContextHelper.cpp:221
2 xul.dll mozilla::dom::HTMLCanvasElement::AfterMaybeChangeAttr dom/html/HTMLCanvasElement.cpp:459
3 xul.dll mozilla::dom::HTMLCanvasElement::AfterSetAttr dom/html/HTMLCanvasElement.cpp:438
4 xul.dll mozilla::dom::Element::SetAttrAndNotify dom/base/Element.cpp:2333
5 xul.dll mozilla::dom::Element::SetAttr dom/base/Element.cpp:2194
6 xul.dll nsGenericHTMLElement::SetUnsignedIntAttr dom/html/nsGenericHTMLElement.h:792
7 xul.dll mozilla::dom::HTMLCanvasElement_Binding::set_width dom/bindings/HTMLCanvasElementBinding.cpp:154
8 xul.dll mozilla::dom::binding_detail::GenericSetter<mozilla::dom::binding_detail::NormalThisPolicy> dom/bindings/BindingUtils.cpp:3099
9 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:544

This is another possible regression from bug 1477756. Again, I only see a few crashes from a single install time. This is crashing at MOZ_RELEASE_ASSERT(false)

Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:74.0) Gecko/20100101 Firefox/74.0
Intel(R) HD Graphics 530
Driver Version: 21.20.16.4551

I'm getting this crash on Nightly 74.0a1 (Build ID: 20200120154412) every time I go to https://threejs.org/examples/#webgl_materials_standard and do a window resize.

https://crash-stats.mozilla.org/report/index/7249d2cc-a76e-4214-b977-e96790200121

Flags: needinfo?(jgilbert)
Assignee: nobody → jgilbert
Flags: needinfo?(jgilbert)
Priority: -- → P1

I can't repro on Win10 with the repro case in comment #1

Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/60f2d834ca69 Handle WebGL SetDimensions when context is lost. r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: