Bug 1608311 - Handle WebGL SetDimensions when context is lost. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D61376